# wallscape

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  vite.config.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: checks.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  THIRD-PARTY-CONTENT.md  TROUBLESHOOTING.md  libmpv-slim-mpv-winbuild-cmake.patch
scripts/: setup-libmpv.ps1
src/: app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_data_migration.rs  auto_pause.rs  bindings.rs  commands.rs  db.rs  downloads.rs  importing.rs  lib.rs  main.rs  motionbgs.rs  motionbgs_cache.rs  settings.rs  storage.rs  wallhaven.rs  wallhaven_cache.rs  wallpaper_lifecycle.rs  wallpaper_media.rs  windows_util.rs
src-tauri/src/commands/: diagnostic.rs  monitors.rs  motionbgs.rs  organization.rs  runtime.rs  settings.rs  shell.rs  storage.rs  wallhaven.rs  wallpaper_health.rs  wallpaper_history.rs  wallpaper_import.rs  wallpaper_import_scan.rs  wallpaper_library.rs  wallpaper_restore.rs  wallpaper_rotation.rs  wallpapers.rs
src-tauri/src/db/: collections.rs  preferences.rs  rows.rs  saved_filters.rs  schema.rs  wallpaper_history.rs  wallpapers.rs
src-tauri/src/wallpaper/: desktop_bounds.rs  desktop_host.rs  desktop_parent.rs  engine.rs  mod.rs  monitor.rs  placement.rs  runtime.rs  system.rs  video.rs  window_lookup.rs  window_snapshot.rs  workerw_search.rs
src-tauri/src/wallpaper_lifecycle/: assignments.rs
src/lib/actions/: reveal.ts
src/lib/api/: wallpaperApi.ts
src/lib/components/: AmbientBackground.svelte  AppDetailModals.svelte  AppViewPanel.svelte  Badge.svelte  DiscoverCard.svelte  EmptyState.svelte  HeroSection.svelte  Icon.svelte  ImportDropOverlay.svelte  LibraryCollectionChips.svelte  (+20 more)
src/routes/: +layout.svelte  +page.svelte
(+52 files in other folders)
