[package]
name = "wallscape-win"
version = "0.1.4"
description = "Native Windows wallpaper manager for images and videos"
authors = ["Wallscape contributors"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wallscape_win_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
scraper = "0.27"

# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Power",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }

# Video playback with hardware acceleration
libmpv2 = { version = "6.0", features = ["render"] }

# Database for wallpaper metadata
rusqlite = { version = "0.31", features = ["bundled"] }

tokio = { version = "1", features = ["full"] }

# Time handling for diagnostics
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"

# Error handling
anyhow = "1.0"

[dev-dependencies]
ts-rs = "12.0.1"
